--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,31 @@
-aniso8601==9.0.1
-asgiref==3.4.1
-attrs==21.2.0
-certifi==2021.5.30
-charset-normalizer==2.0.6
-click==8.0.1
-Flask==2.0.1
-idna==3.2
-inflection==0.5.1
-iniconfig==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-packaging==21.0
-pluggy==1.0.0
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.5
-pytz==2021.1
-requests==2.26.0
-six==1.16.0
-sqlparse==0.4.2
-toml==0.10.2
-urllib3==1.26.7
-uWSGI==2.0.19.1
-Werkzeug==2.0.1
+aniso8601>=10.0.1
+asgiref>=3.9.1
+attrs>=25.3.0
+blinker>=1.9.0
+certifi>=2025.7.14
+charset-normalizer>=3.4.2
+click>=8.2.1
+exceptiongroup>=1.3.0
+Flask>=3.1.1
+idna>=3.10
+inflection>=0.5.1
+iniconfig>=2.1.0
+itsdangerous>=2.2.0
+Jinja2>=3.1.6
+MarkupSafe>=3.0.2
+packaging>=25.0
+pluggy>=1.6.0
+py>=1.11.0
+Pygments>=2.19.2
+pyparsing>=3.2.3
+pytest>=8.4.1
+pytz>=2025.2
+requests>=2.32.4
+six>=1.17.0
+sqlparse>=0.5.3
+toml>=0.10.2
+tomli>=2.2.1
+typing_extensions>=4.14.1
+urllib3>=2.5.0
+uWSGI>=2.0.30
+Werkzeug>=3.1.3
