--- a/flask-app/app.ini
+++ b/flask-app/app.ini
@@ -1,9 +1,9 @@
 [uwsgi]
 wsgi-file = app.py
 callable = app
-processes = 4
-threads = 2
-socket = :5000
+processes = 2
+threads = 1
+http = 0.0.0.0:5000
 master = true
 chmod-socket = 660
 vacuum = true
