--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,10 @@
 server {
     listen 8080;
     location / {
-        include uwsgi_params;
-        uwsgi_pass url-follower:5000;
-     }
+        proxy_pass http://react-app:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
